backend/infra/K8S/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thinkshare-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thinkshare-backend
  template:
    metadata:
      labels:
        app: thinkshare-backend
    spec:
      containers:
      - name: thinkshare-backend
        image: khalidaber/thinkshare-backend:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: thinkshare-backend
spec:
  type: LoadBalancer
  selector:
    app: thinkshare-backend
  ports:
    - port: 8080
      targetPort: 8080
